# zembra-backend-rust

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
config/: default.toml
docs/: PROGRESS.md  http-client-server-api.md  release.md
docs/design-docs/: r001-backend-tech-stack.md  r002-user-config-file.md  r003-shared-schema-submodule.md  r004-server-crud-api.md  r005-openapi-runtime-docs.md  r006-recent-notes-api.md  r007-logging-module.md  r008-schema-v030-upgrade.md  r009-supabase-sync.md  r010-supabase-sync-config-api.md  r011-lan-web-access.md  r012-github-release-pipeline.md  r013-random-tags-api.md  r014-random-fields-api.md  r015-random-notes-api.md  r017-patch-note-taxonomy-api.md  r018-daily-note-counts-api.md  r019-note-links-api.md  r020-notes-by-date-api.md  r022-repository-structure-refactor.md  r023-supabase-secret-key-api.md  r024-recent-notes-role-filter.md  r025-schema-v040-upgrade.md  r026-schema-v040-adaptation-scope.md  r027-supabase-schema-ownership-migration.md  r028-supabase-business-table-projection.md  r029-health-version-tracking.md  r030-daemon-service.md  r031-absolute-database-path.md  r032-global-init-command.md  r033-workspace-isolation.md  r034-workspace-name.md  r035-workspace-query-crud-api.md  r036-field-delete-api.md  r037-sync-entity-lifecycle.md
docs/exec-plans/: tech-debt-tracker.md
docs/references/: lan-web-access.md  r028-supabase-schema-sync-skill-receipt.md
docs/request-clarify/: r001-backend-tech-stack.md  r002-user-config-file.md  r003-shared-schema-submodule.md  r005-openapi-runtime-docs.md  r006-recent-notes-api.md  r007-logging-module.md  r008-schema-v030-upgrade.md  r009-supabase-sync.md  (+27 more)
scripts/: verify_r028_real_sync.sh  verify_supabase_real_sync.sh
src/: api_doc.rs  app.rs  cli.rs  config.rs  config_init.rs  error.rs  init.rs  lib.rs  logging.rs  main.rs  server.rs  service_init.rs  version.rs
tests/: cli_tests.rs  config_init_tests.rs  cors_routes.rs  health_routes.rs  init_tests.rs  notes_crud_routes.rs  notes_links_routes.rs  notes_query_routes.rs  notes_taxonomy_routes.rs  openapi_routes.rs  service_init_tests.rs  sync_config_routes.rs  sync_routes.rs  workspaces_routes.rs
(+105 files in other folders)
