[package]
name = "zembra-backend-rust"
version = "0.1.0"
edition = "2024"

[package.metadata.zembra]
version_policy = "semver"
release_channel = "dev"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
config = "0.15"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "sqlite", "postgres", "macros", "migrate", "chrono", "uuid"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal", "time"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml = "0.8"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
